--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
 	"type": "module",
 	"dependencies": {
 		"firebase": "^10.1.0",
-		"sass": "^1.64.1",
-		"sveltefire": "^0.4.0"
+		"sass": "^1.64.1"
 	}
 }
